--- a/01.mainpage/mainpage.html
+++ b/01.mainpage/mainpage.html
@@ -162,7 +162,7 @@
   </div>
 </div>
 <div class="container1">
-  <audio id="player" src="../bgm/1-40. Goldenrod City.mp3" autoplay controls loop
+  <audio id="player" src="../src/assets/bgm/1-40. Goldenrod City.mp3" autoplay controls loop
     onloadstart="this.volume=0.15"></audio>
   <!-- <audio src="../bgm/1-05. New Bark Town.mp3" autoplay loop onloadstart="this.volume=0.2"></audio> -->
 
@@ -170,7 +170,8 @@
   <main>
     <section>
       <!-- <button class="modal_btn"> <img class="trainerpika" src="../src/trainerwalk.png" width="50px" alt=""></button> -->
-      <a href="#" class="modal_btn"> <img class="trainercredit" src="../src/trainerwalk.png" width="50px" alt=""></a>
+      <a href="#" class="modal_btn"> <img class="trainercredit" src="../src/assets/trainerwalk.png" width="50px"
+          alt=""></a>
 
     </section>
   </main>
@@ -227,8 +228,8 @@
       </div>
   </div>
 
-  <img class="world" src="../src/worldearth.png" alt="">
-  <img class="trainerwalk" src="../src/gif/trainerwalkgif.gif" alt="">
+  <img class="world" src="../src/assets/worldearth.png" alt="">
+  <img class="trainerwalk" src="../src/assets/gif/trainerwalkgif.gif" alt="">
 
 
   <!-- logo 스크립트 -->
@@ -313,7 +314,7 @@
       </div>
       <div class="overlay-panel overlay-right">
         <h1>안녕하세요,
-          트레이너님 !</h1>
+          트레이너님!</h1>
 
 
         <p>새로운 여정을 떠날 준비가 되셨나요?</p>
@@ -349,52 +350,52 @@
         <table>
           <tr>
             <td>영원한 나의 친구</td>
-            <th><img src="../src/achv/mini/pika.webp" alt=""></th>
+            <th><img src="../src/assets/achv/mini/pika.webp" alt=""></th>
           </tr>
           <tr>
             <td>다이아몬드보다 딱딱한 껍질</td>
-            <th><img src="../src/achv/mini/celler.png" alt=""></th>
+            <th><img src="../src/assets/achv/mini/celler.png" alt=""></th>
           </tr>
           <tr>
             <td>먹고나면 잘 뿐</td>
-            <th><img src="../src/achv/mini/jamman.webp" alt=""></th>
+            <th><img src="../src/assets/achv/mini/jamman.webp" alt=""></th>
           </tr>
           <tr>
             <td>손발에 불꽃을 두르고</td>
-            <th><img src="../src/achv/mini/bulkot.webp" alt=""></th>
+            <th><img src="../src/assets/achv/mini/bulkot.webp" alt=""></th>
           </tr>
           <tr>
             <td>악몽 속에 나타난 정체</td>
-            <th><img src="../src/achv/mini/darkrai.webp" alt=""></th>
+            <th><img src="../src/assets/achv/mini/darkrai.webp" alt=""></th>
           </tr>
           <tr>
             <td>기본적으로 멍하니 있음</td>
-            <th><img src="../src/achv/mini/yadoran.webp" alt=""></th>
+            <th><img src="../src/assets/achv/mini/yadoran.webp" alt=""></th>
           </tr>
           <tr>
             <td>그림자 속의 저주</td>
-            <th><img src="../src/achv/mini/phantom.webp" alt=""></th>
+            <th><img src="../src/assets/achv/mini/phantom.webp" alt=""></th>
           </tr>
           <tr>
             <td>바다로 떨어진 무수한 별들</td>
-            <th><img src="../src/achv/mini/bulgasari.webp" alt=""></th>
+            <th><img src="../src/assets/achv/mini/bulgasari.webp" alt=""></th>
           </tr>
           <tr>
             <td>생명과 공존의 상징</td>
-            <th><img src="../src/achv/mini/lugia.webp" alt=""></th>
+            <th><img src="../src/assets/achv/mini/lugia.webp" alt=""></th>
           </tr>
           <tr>
             <td>모든 것들의 선조</td>
-            <th><img src="../src/achv/mini/myu.webp" alt=""></th>
+            <th><img src="../src/assets/achv/mini/myu.webp" alt=""></th>
           </tr>
         </table>
       </div>
     </div>
     <div class="trainerright-right">
-      <img src="../src/achv/mini/yadon.webp" alt="" style="left: 20%; top: 30%">
-      <img src="../src/achv/mini/eve.webp" alt="" style="left: 50%; top: 50%">
-      <img src="../src/achv/mini/tangguri.webp" alt="" style="left: 24%; top:60%; ">
-      <img src="../src/achv/mini/gorapaduk.webp" alt="" style="left: 70%; top: 80%">
+      <img src="../src/assets/achv/mini/yadon.webp" alt="" style="left: 20%; top: 30%">
+      <img src="../src/assets/achv/mini/eve.webp" alt="" style="left: 50%; top: 50%">
+      <img src="../src/assets/achv/mini/tangguri.webp" alt="" style="left: 24%; top:60%; ">
+      <img src="../src/assets/achv/mini/gorapaduk.webp" alt="" style="left: 70%; top: 80%">
     </div>
   </div>
 </div>
