--- a/02_Regions/Chubu.html
+++ b/02_Regions/Chubu.html
@@ -163,13 +163,13 @@
 
 <body>
   <div class="tablecontainer">
-    <audio id="player" src="../bgm/1-40. Goldenrod City.mp3" autoplay controls loop
+    <audio id="player" src="../src/assets/bgm/1-40. Goldenrod City.mp3" autoplay controls loop
       onloadstart="this.volume=0.15"></audio>
-    <img class="pikaoko" src="../src/gif/pikagif.gif" alt="" />
-    <img class="redstand" src="../src/gif/redgif.gif" alt="" />
-    <img class="greenstand" src="../src/gif/greengif.gif" alt="" />
-    <img class="bluestand" src="../src/gif/bluegif2.gif" alt="" />
-    <img class="jamman" src="../src/gif/jammangif.gif" alt="" />
+    <img class="pikaoko" src="../src/assets/gif/pikagif.gif" alt="" />
+    <img class="redstand" src="../src/assets/gif/redgif.gif" alt="" />
+    <img class="greenstand" src="../src/assets/gif/greengif.gif" alt="" />
+    <img class="bluestand" src="../src/assets/gif/bluegif2.gif" alt="" />
+    <img class="jamman" src="../src/assets/gif/jammangif.gif" alt="" />
 
     <div class="manholetable">
       <h1>간토</h1>
@@ -178,54 +178,54 @@
         <tr>
           <th>토치기</th>
           <td colspan="6">
-            <img src="../src/hole/Kanto/Tochigi/utsunomiya1/utsunomiya1_sml.png" alt="" width="" />
-            <img src="../src/hole/Kanto/Tochigi/utsunomiya2/utsunomiya2_sml.png" alt="" width="" />
-            <img src="../src/hole/Kanto/Tochigi/utsunomiya3/utsunomiya3_sml.png" alt="" width="" />
+            <img src="../src/assets/hole/Kanto/Tochigi/utsunomiya1/utsunomiya1_sml.png" alt="" width="" />
+            <img src="../src/assets/hole/Kanto/Tochigi/utsunomiya2/utsunomiya2_sml.png" alt="" width="" />
+            <img src="../src/assets/hole/Kanto/Tochigi/utsunomiya3/utsunomiya3_sml.png" alt="" width="" />
           </td>
         </tr>
         <tr>
           <th>사이타마</th>
           <td colspan="6">
-            <img src="../src/hole/Kanto/Saitama/tokorozawa1/tokorozawa1_sml.png" alt="" width="" />
-            <img src="../src/hole/Kanto/Saitama/tokorozawa2/tokorozawa2_sml.png" alt="" width="" />
-            <img src="../src/hole/Kanto/Saitama/tokorozawa3/tokorozawa3_sml.png" alt="" width="" />
+            <img src="../src/assets/hole/Kanto/Saitama/tokorozawa1/tokorozawa1_sml.png" alt="" width="" />
+            <img src="../src/assets/hole/Kanto/Saitama/tokorozawa2/tokorozawa2_sml.png" alt="" width="" />
+            <img src="../src/assets/hole/Kanto/Saitama/tokorozawa3/tokorozawa3_sml.png" alt="" width="" />
           </td>
         </tr>
         <tr>
           <th>치바</th>
           <td colspan="6">
-            <img src="../src/hole/Kanto/Chiba/Katori1/Katori1_sml.png" alt="" width="" />
-            <img src="../src/hole/Kanto/Chiba/Katori2/Katori2_sml.png" alt="" width="" />
-            <img src="../src/hole/Kanto/Chiba/Katori3/Kantori3_sml.png" alt="" width="" />
-            <img src="../src/hole/Kanto/Chiba/Katori4/Katori4_sml.png" alt="" width="" />
+            <img src="../src/assets/hole/Kanto/Chiba/Katori1/Katori1_sml.png" alt="" width="" />
+            <img src="../src/assets/hole/Kanto/Chiba/Katori2/Katori2_sml.png" alt="" width="" />
+            <img src="../src/assets/hole/Kanto/Chiba/Katori3/Kantori3_sml.png" alt="" width="" />
+            <img src="../src/assets/hole/Kanto/Chiba/Katori4/Katori4_sml.png" alt="" width="" />
           </td>
         </tr>
         <tr>
           <th>도쿄</th>
           <td colspan="6">
             <a href="../03.manholecity/manholecity_Tokyo.html"><img
-                src="../src/hole/Kanto/Tokyo/machida1/machida1_l.png" alt="" width="" />
-              <img src="../src/hole/Kanto/Tokyo/machida2/machida2_l.png" alt="" width="" />
-              <img src="../src/hole/Kanto/Tokyo/machida3/machida3_l.png" alt="" width="" />
-              <img src="../src/hole/Kanto/Tokyo/machida4/machida4_l.png" alt="" width="" />
-              <img src="../src/hole/Kanto/Tokyo/machida5/machida5_l.png" alt="" width="" />
-              <img src="../src/hole/Kanto/Tokyo/machida6/machida6_l.png" alt="" width="" />
-              <img src="../src/hole/Kanto/Tokyo/Ogasawara1/Ogasawara1_l.png" alt="" width="" />
-              <img src="../src/hole/Kanto/Tokyo/Ogasawara2/Ogasawara2_l.png" alt="" width="" />
-              <img src="../src/hole/Kanto/Tokyo/Ogasawara3/Ogasawara3_l.png" alt="" width="" />
-              <img src="../src/hole/Kanto/Tokyo/Ogasawara4/Ogasawara4_l.png" alt="" width="" />
-              <img src="../src/hole/Kanto/Tokyo/ueno1/ueno1_sml.png" alt="" width="" />
-              <img src="../src/hole/Kanto/Tokyo/ueno2/ueno2_l.png" alt="" width="" /></a>
+                src="../src/assets/hole/Kanto/Tokyo/machida1/machida1_l.png" alt="" width="" />
+              <img src="../src/assets/hole/Kanto/Tokyo/machida2/machida2_l.png" alt="" width="" />
+              <img src="../src/assets/hole/Kanto/Tokyo/machida3/machida3_l.png" alt="" width="" />
+              <img src="../src/assets/hole/Kanto/Tokyo/machida4/machida4_l.png" alt="" width="" />
+              <img src="../src/assets/hole/Kanto/Tokyo/machida5/machida5_l.png" alt="" width="" />
+              <img src="../src/assets/hole/Kanto/Tokyo/machida6/machida6_l.png" alt="" width="" />
+              <img src="../src/assets/hole/Kanto/Tokyo/Ogasawara1/Ogasawara1_l.png" alt="" width="" />
+              <img src="../src/assets/hole/Kanto/Tokyo/Ogasawara2/Ogasawara2_l.png" alt="" width="" />
+              <img src="../src/assets/hole/Kanto/Tokyo/Ogasawara3/Ogasawara3_l.png" alt="" width="" />
+              <img src="../src/assets/hole/Kanto/Tokyo/Ogasawara4/Ogasawara4_l.png" alt="" width="" />
+              <img src="../src/assets/hole/Kanto/Tokyo/ueno1/ueno1_sml.png" alt="" width="" />
+              <img src="../src/assets/hole/Kanto/Tokyo/ueno2/ueno2_l.png" alt="" width="" /></a>
           </td>
         </tr>
         <tr>
           <th>카나가와</th>
           <td colspan="6">
-            <img src="../src/hole/Kanto/Kanagawa/yokohama1/yokohama1_l.png" alt="" width="" />
-            <img src="../src/hole/Kanto/Kanagawa/yokohama2/yokohama2_l.png" alt="" width="" />
-            <img src="../src/hole/Kanto/Kanagawa/yokohama3/yokohama3_l.png" alt="" width="" />
-            <img src="../src/hole/Kanto/Kanagawa/yokohama4/yokohama4_l.png" alt="" width="" />
-            <img src="../src/hole/Kanto/Kanagawa/yokohama5/yokohama5_l.png" alt="" width="" />
+            <img src="../src/assets/hole/Kanto/Kanagawa/yokohama1/yokohama1_l.png" alt="" width="" />
+            <img src="../src/assets/hole/Kanto/Kanagawa/yokohama2/yokohama2_l.png" alt="" width="" />
+            <img src="../src/assets/hole/Kanto/Kanagawa/yokohama3/yokohama3_l.png" alt="" width="" />
+            <img src="../src/assets/hole/Kanto/Kanagawa/yokohama4/yokohama4_l.png" alt="" width="" />
+            <img src="../src/assets/hole/Kanto/Kanagawa/yokohama5/yokohama5_l.png" alt="" width="" />
           </td>
         </tr>
         <tr>
